crates/ferrum-interfaces/tests/ui/vnext/fail/resolution_source_artifact_is_not_deserialize.rs
use ferrum_interfaces::vnext::ResolutionSourceArtifact;

fn main() {
    let _: ResolutionSourceArtifact = serde_json::from_str("{}").unwrap();
}
